--- a/circle.yml
+++ b/circle.yml
@@ -20,5 +20,4 @@ dependencies:
 
 test:
     override:
-      - (./gradlew assemble):
-            timeout: 360
+      - ./gradlew connectedAndroidTest
