--- a/circle.yml
+++ b/circle.yml
@@ -20,4 +20,5 @@ dependencies:
 
 test:
     override:
-      - ./gradlew connectedAndroidTest
+      - (./gradlew assemble):
+            timeout: 360
