--- a/circle.yml
+++ b/circle.yml
@@ -19,6 +19,14 @@ dependencies:
 
 
 test:
-    override:
-      - (./gradlew assemble):
-            timeout: 360
+    pre:
+        - $ANDROID_HOME/tools/emulator -avd testAVD -no-skin -no-audio -no-window:
+          background: true
+        - (./gradlew assembleDebug):
+          timeout: 1200
+        - (./gradlew assembleDebugTest):
+          timeout: 1200
+        - (source scripts/environmentSetup.sh && waitForAVD)
+      override:
+        - (echo "Running JUnit tests!")
+        - (./gradlew connectedAndroidTest)
