--- a/circle.yml
+++ b/circle.yml
@@ -19,14 +19,16 @@ dependencies:
 
 
 test:
-    pre:
-        - $ANDROID_HOME/tools/emulator -avd testAVD -no-skin -no-audio -no-window:
-          background: true
-        - (./gradlew assembleDebug):
-          timeout: 1200
-        - (./gradlew assembleDebugTest):
-          timeout: 1200
-        - (source scripts/environmentSetup.sh && waitForAVD)
-      override:
-        - (echo "Running JUnit tests!")
-        - (./gradlew connectedAndroidTest)
+     override:
+       # start the emulator
+       - emulator -avd circleci-android22 -no-audio -no-window:
+           background: true
+           parallel: true
+       # wait for it to have booted
+       - circle-android wait-for-boot
+       # run tests  against the emulator.
+       - ./gradlew connectedAndroidTest
+       # copy the build outputs to artifacts
+       - cp -r my-project/build/outputs $CIRCLE_ARTIFACTS
+       # copy the test results to the test results directory.
+       - cp -r my-project/build/outputs/androidTest-results/* $CIRCLE_TEST_REPORTS
