--- a/circle.yml
+++ b/circle.yml
@@ -29,6 +29,6 @@ test:
        # run tests  against the emulator.
        - ./gradlew connectedAndroidTest
        # copy the build outputs to artifacts
-       - cp -r Unit_test/build/outputs $CIRCLE_ARTIFACTS
+       - mkdir Unit_test/app/build/outputs $CIRCLE_ARTIFACTS
        # copy the test results to the test results directory.
-       - cp -r Unit_test/build/outputs/androidTest-results/* $CIRCLE_TEST_REPORTS
+       - mkdir Unit_test/app/build/outputs/androidTest-results/* $CIRCLE_TEST_REPORTS
